--- a/views/challenges/challenge_network/category3_network.ejs
+++ b/views/challenges/challenge_network/category3_network.ejs
@@ -14,6 +14,28 @@
           <div class="face face1">
             <div class="content">
                <i class="fab fa-windows"></i>            
+              <h3>[튜토리얼]</h3>
+              <br>
+              <h3>Easy</h3>
+            </div>
+          </div>
+          <div class="face face2">
+            <div class="content">
+              <br>
+              <p> Points : 50pt</p>
+              <br>
+              <p> Examiner : 장현호</p>
+              <br>
+              <div class="triggers">
+                <label for="popup-1">Challenge</label>
+              </div>
+            </div>
+          </div>
+       </div>
+        <div class="card">
+          <div class="face face1">
+            <div class="content">
+               <i class="fab fa-windows"></i>            
               <h3>Challenge1</h3>
               <br>
               <h3>Easy</h3>
@@ -27,7 +49,7 @@
               <p> Examiner : 장현호</p>
               <br>
               <div class="triggers">
-                <label for="popup-1">Challenge</label>
+                <label for="popup-2">Challenge</label>
               </div>
             </div>
           </div>
@@ -50,7 +72,7 @@
             <p> Examiner : 장현호</p>
             <br>
             <div class="triggers">
-              <label for="popup-2">Challenge</label>
+              <label for="popup-3">Challenge</label>
             </div>
           </div>
         </div>
@@ -223,7 +245,31 @@
   </div>
 -->
 
-   <input type="checkbox" class="vcms__popup-check" name="popup-1" id="popup-1">
+<input type="checkbox" class="vcms__popup-check" name="popup-1" id="popup-1">
+<div class="vcms__popup">
+  <div class="inner">
+    <div class="header">
+      [튜토리얼]
+    </div>
+    <div class="txt">
+      <p><b>Telnet</b></p>
+      <br>
+      <p>UDP 패킷이 캡쳐되었습니다.
+      <br>pcapng 파일을 열면 플래그가 보입니다.</p>
+      <p><a href='network/tutorial.pcapng'>tutorial.pcapng</a></p>
+    </div>
+    <form action="/challenge/flag" method="post">
+    <div class="footer">
+      <button class="btn" type="submit" method="post">Flag</button>
+      <input type="hidden" name="challenge_title" value="network1">
+      <input class="flag" id="flag" type="text"name='flag' placeholder="CUHA{c_u_h_a_f_l_a_g}" />
+      <label class="close" for="popup-1">Close</label>
+    </div>
+  </div>
+</div>
+</form>
+
+   <input type="checkbox" class="vcms__popup-check" name="popup-2" id="popup-2">
   <div class="vcms__popup">
     <div class="inner">
       <div class="header">
@@ -233,20 +279,20 @@
         <p><b>Telnet</b></p>
         <br>
         <p>엘리스와 이브가 Telnet 통신을 하고 있어요. 비밀번호를 찾으실 수 있으신가요?</p>
-        <p><a href='network/download_network1'>telnet.pcapng</a></p>
+        <p><a href='network/telnet.pcapng'>telnet.pcapng</a></p>
       </div>
       <form action="/challenge/flag" method="post">
       <div class="footer">
         <button class="btn" type="submit" method="post">Flag</button>
         <input type="hidden" name="challenge_title" value="network1">
         <input class="flag" id="flag" type="text"name='flag' placeholder="CUHA{c_u_h_a_f_l_a_g}" />
-        <label class="close" for="popup-1">Close</label>
+        <label class="close" for="popup-2">Close</label>
       </div>
     </div>
   </div>
 </form>
 
-  <input type="checkbox" class="vcms__popup-check" name="popup-2" id="popup-2">
+  <input type="checkbox" class="vcms__popup-check" name="popup-3" id="popup-3">
   <div class="vcms__popup">
     <div class="inner">
       <div class="header">
@@ -258,14 +304,14 @@
         <p>DOS 공격에서 공격자가 설정한 id와 패킷 data size는 무엇일까요?</p>
         <br>
         <p>CUHA{id_datasize}</p>
-        <p><a href='network/download_network2'>DOS.zip</a></p>
+        <p><a href='network/DOS.zip'>DOS.zip</a></p>
       </div>
       <form action="/challenge/flag" method="post">
       <div class="footer">
         <button class="btn" type="submit" method="post">Flag</button>
         <input type="hidden" name="challenge_title" value="network2">
         <input class="flag" id="flag" type="text" name='flag' placeholder="CUHA{c_u_h_a_f_l_a_g}" />
-        <label class="close" for="popup-2">Close</label>
+        <label class="close" for="popup-3">Close</label>
       </div>
     </div>
   </div>
