--- a/views/challenges/challenge_network/category3_network.ejs
+++ b/views/challenges/challenge_network/category3_network.ejs
@@ -261,7 +261,7 @@
     <form action="/challenge/flag" method="post">
     <div class="footer">
       <button class="btn" type="submit" method="post">Flag</button>
-      <input type="hidden" name="challenge_title" value="network1">
+      <input type="hidden" name="challenge_title" value="network_tutorial">
       <input class="flag" id="flag" type="text"name='flag' placeholder="CUHA{c_u_h_a_f_l_a_g}" />
       <label class="close" for="popup-1">Close</label>
     </div>
