--- a/views/challenges/scoreboard.ejs
+++ b/views/challenges/scoreboard.ejs
@@ -20,10 +20,10 @@
             <label>Rank</label>
           </div>
           <div class="ladder-nav--results-col">
-            <label>Team Name</label>
+            <label>Nickname</label>
           </div>
           <div class="ladder-nav--results-col">
-            <label>Latest Solve</label>
+            <label>Solved Count</label>
           </div>
           <div class="ladder-nav--results-col">
             <label>Points</label>
