--- a/public/stylesheets/challenges.css
+++ b/public/stylesheets/challenges.css
@@ -15,13 +15,13 @@ body{
   background: none;
   border: none;
   border-radius: 0.25rem;
+  margin: 0 0.5rem;
 }
 
 .container{
   width: 1000px;
   position: relative;
   display: flex;
-  justify-content: space-between;
   flex-wrap:wrap;
   
 }
