--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,9 +10,9 @@
         <canvas id="canvas"></canvas>
         <div class="container">
           <h1 class="neonText">
-                CUHA CTF 2022
+                CUHA Freshman CTF 2023
           </h1>
-          <h2 class="neonText">Welcome to the CUHA CTF 2022</h2> 
+          <h2 class="neonText">Welcome to the CUHA Freshman CTF 2023</h2> 
       
        </div>
 
@@ -45,11 +45,8 @@
      <section class="stacked-cards">
         <div class="section-header">
           <h2>
-            who <br>
-            made <br>
-            CUHA <br>
-            CTF <br>
-            2022 <br>
+            who made CUHA
+            Freshman CTF 2023
           </h2>
         </div>
         <div class="card-grid">
