--- a/views/common/header.ejs
+++ b/views/common/header.ejs
@@ -1,6 +1,6 @@
 <header>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="/">CUHA CTF 2022</a>
+    <a class="navbar-brand" href="/">CUHA Freshman CTF 2023</a>
     
     <div class="collapse navbar-collapse justify-content-between" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
