--- a/views/members/settings.ejs
+++ b/views/members/settings.ejs
@@ -18,6 +18,10 @@
             <label>Email</label>
           </div>
           <div class="user-box">
+            <input type="text" name="name" required="true" value="<%= settings.name %>" readonly>
+            <label>Name</label>
+          </div>
+          <div class="user-box">
             <input type="text" name="nickname" required="true" value="<%= settings.nickname %>">
             <label>Nickname</label>
           </div>
