--- a/views/members/register.ejs
+++ b/views/members/register.ejs
@@ -21,6 +21,10 @@
           <label>Student Number</label>
         </div>
         <div class="user-box">
+          <input type="text" name="name" required="true">
+          <label>Name</label>
+        </div>
+        <div class="user-box">
           <input type="text" name="nickname" required="true">
           <label>Nickname</label>
         </div>
