--- a/views/index.ejs
+++ b/views/index.ejs
@@ -23,15 +23,15 @@
           <br>
           <h3>CTF Period</h3>
           <br>
-          <p>Start : 2022-11-19T14:00:00+09:00</p>
-          <p>End : 2022-11-19T18:00:00+09:00</p>
+          <p>Start : 2023-03-06T14:00:00+09:00</p>
+          <p>End : 2023-03-06T16:00:00+09:00</p>
           <br>
           <script src="https://cdn.logwork.com/widget/countdown.js"></script>
-          <a href="https://logwork.com/countdown-wijv" class="countdown-timer" data-timezone="Asia/Seoul" data-language="ko" data-date="2022-11-19 14:00" data-textcolor="#ffffff" data-date="2022-09-26 20:20" data-unitscolor="#ffffff">Countdown</a>
+          <a href="https://logwork.com/countdown-wijv" class="countdown-timer" data-timezone="Asia/Seoul" data-language="ko" data-date="2023-03-06 16:00" data-textcolor="#ffffff" data-date="2022-09-26 20:20" data-unitscolor="#ffffff">Countdown to End</a>
           <br>
           <br>
           <br>
-          <a href="https://discord.gg/5KuUTd9PUH"><img class="discord_img" src="https://img.icons8.com/ios/200/000000/discord.png"/></a>
+          <a href="https://discord.gg/dCQ9CWmjHa"><img class="discord_img" src="https://img.icons8.com/ios/200/000000/discord.png"/></a>
           <br>
           <br>
           <p>If you want help, Click to discord server!!!</p>
@@ -54,22 +54,11 @@
             <article class="child">
               <h2><a href="#">Developer, Examiner</a></h2>
               <p>
-                김광운
+                장현호
+                
               </p>
               <p>
                 CUHA 동아리 회장
-              </p>
-              <div class="buttons">
-                <a href="https://kilkat.tistory.com/"><button class="button detail"> link </button></a>
-              </div>
-            </article>
-            <article class="child">
-              <h2><a href="#">Developer, Examiner</a></h2>
-              <p>
-                장현호
-              </p>
-              <p>
-                CUHA 동아리 회원
               </p>
               <p>
                 Client 동아리 회원
@@ -78,18 +67,30 @@
                 <a href="https://github.com/CyberSecurityHat"><button class="button detail"> link </button></a>
               </div>
             </article>
+            <article class="child">
+              <h2><a href="#">Developer, Examiner</a></h2>
+              <p>
+                유지민
+              </p>
+              <p>
+                CUHA 동아리 부회장
+              </p>
+              <p>
+                Client 동아리 회원
+              </p>
+            </article>
           </article>
           <article class="child">
             <h2><a href="#">Developer, Examiner</a></h2>
             <p>
-              유지민
+              김광운
             </p>
             <p>
               CUHA 동아리 회원
             </p>
-            <p>
-              Client 동아리 회원
-            </p>
+            <div class="buttons">
+              <a href="https://kilkat.tistory.com/"><button class="button detail"> link </button></a>
+            </div>
           </article>
         </div>
       </section>
