--- a/views/index.ejs
+++ b/views/index.ejs
@@ -23,8 +23,8 @@
           <br>
           <h3>CTF Period</h3>
           <br>
-          <p>Start : 2023-03-06T14:00:00+09:00</p>
-          <p>End : 2023-03-06T16:00:00+09:00</p>
+          <p>Start : 2023-03-20T14:00:00+09:00</p>
+          <p>End : 2023-03-20T16:00:00+09:00</p>
           <br>
           <script src="https://cdn.logwork.com/widget/countdown.js"></script>
           <a href="https://logwork.com/countdown-wijv" class="countdown-timer" data-timezone="Asia/Seoul" data-language="ko" data-date="2023-03-06 16:00" data-textcolor="#ffffff" data-date="2022-09-26 20:20" data-unitscolor="#ffffff">Countdown to End</a>
@@ -39,8 +39,9 @@
         </article>
         <p style="font-size:4rem;text-align: center;color:white;">sponsor</p>
         <center>
-          <img src="/img/image.png">
-          <img src="/img/image2.png">
+          <!-- <img src="/img/image.png">
+          <img src="/img/image2.png"> -->
+          <img src="/img/cju_symbol.png">
         </center>
      <section class="stacked-cards">
         <div class="section-header">
