--- a/views/index.ejs
+++ b/views/index.ejs
@@ -31,7 +31,7 @@
           <br>
           <br>
           <br>
-          <a href="https://discord.gg/dCQ9CWmjHa"><img class="discord_img" src="https://img.icons8.com/ios/200/000000/discord.png"/></a>
+          <a href="https://discord.gg/dCQ9CWmjHa" target="_blank"><img class="discord_img" src="https://img.icons8.com/ios/200/000000/discord.png"/></a>
           <br>
           <br>
           <p>If you want help, Click to discord server!!!</p>
@@ -41,7 +41,9 @@
         <center>
           <!-- <img src="/img/image.png">
           <img src="/img/image2.png"> -->
-          <img src="/img/cju_symbol.png">
+          <a href="https://www.cju.ac.kr/sec/index.do" target="_blank">
+            <img src="/img/cju_symbol.png">
+          </a>
         </center>
      <section class="stacked-cards">
         <div class="section-header">
@@ -62,7 +64,7 @@
                 CUHA 동아리 회장
               </p>
               <div class="buttons">
-                <a href="https://github.com/CyberSecurityHat"><button class="button detail"> link </button></a>
+                <a href="https://github.com/CyberSecurityHat" target="_blank"><button class="button detail"> link </button></a>
               </div>
             </article>
             <article class="child">
@@ -87,7 +89,7 @@
               CUHA 동아리 회원
             </p>
             <div class="buttons">
-              <a href="https://kilkat.tistory.com/"><button class="button detail"> link </button></a>
+              <a href="https://kilkat.tistory.com/" target="_blank"><button class="button detail"> link </button></a>
             </div>
           </article>
         </div>
