--- a/views/members/settings.ejs
+++ b/views/members/settings.ejs
@@ -30,6 +30,10 @@
             <label>Student Number</label>
           </div>
           <div class="user-box">
+            <input type="password" name="now_password" required="true">
+            <label>Now Password</label>
+          </div>
+          <div class="user-box">
             <input type="password" name="password" required="true">
             <label>Password (Update)</label>
           </div>
