--- a/views/common/header.ejs
+++ b/views/common/header.ejs
@@ -20,8 +20,11 @@
             
           </ul>
         </li>
+        <li class="nav-item active">
+          <a class="nav-link" href="/rules">Rules <span class="sr-only"></span></a>
+        </li>
       </ul>
-      <p style="color: #212529;">CUHA{G00d!th1s_1s_th3_s4nity_ch3ck!!!:D}</p>
+      <p style="color: #212529; position: absolute; left: 50%; transform: translateX(-50%);">CUHA{G00d!th1s_1s_th3_s4nity_ch3ck!!!:D}</p>
       <ul class="navbar-nav mr-auto">
         <% if(!session.is_logined){ %>
         <li class="nav-item">
