--- a/views/etc/rules.ejs
+++ b/views/etc/rules.ejs
@@ -11,7 +11,7 @@
             <div class="title">Rules</div>
             <p>1. Flag 형식은 CUHA{This_is_just_example_flag}입니다.</p>
             <p>2. 대회 인프라에 대한 공격 행위는 금지입니다.</p>
-            <p>3. 다른 참가자에 대한 방해 행위는 금지입니다.</p>
+            <p>3. 대회 운영 및 다른 참가자에 대한 방해 행위는 금지입니다.</p>
             <p>4. Flag, 솔루션, 힌트 등의 공유는 금지입니다.</p>
             <P>5. chatGPT와 같은 AI 챗봇 사용은 금지입니다.</P>
             <p>6. 기타 문의사항은 운영진에게 말씀해주시기 바랍니다.</p>
