--- a/views/challenges/challenge_crypto/category4_crypto.ejs
+++ b/views/challenges/challenge_crypto/category4_crypto.ejs
@@ -283,7 +283,7 @@
       <p><b>Simple Substitution</b></p>
       <br>
       <p>JBOH{Lhzf_jfwav_johsslunl_dpao_Jhlzhy_jpwoly}</p>
-      <p>Hint1: 글자만 잘 치환하면 될 거 같아요<br>
+      <p>Hint1: 글자만 잘 치환하면 될 거 같아요.<br>
          Hint2: 복호화를 위해 뒤로 7번 움직이세요.
         </p>  
     </div>
@@ -332,10 +332,10 @@
       <p><b>3DES</b></p>
       <br>
       <p>플래그를 찾아주세요.<br>
-         키는 CUHACTF2022 입니다.
+         키는 CUHA 입니다.
       </p>
       <p>Hint: Ciphertext ⊕ Plaintext</p>
-      <p><a href='crypto/odt-IV-adb6be87eb09b76d.dat'>odt-IV-adb6be87eb09b76d.dat</a></p>
+      <p><a href='crypto/odt-IV-cafc3deaddecbcad.dat'>odt-IV-cafc3deaddecbcad.dat</a></p>
     </div>
     <form action="/challenge/flag" method="post">
     <div class="footer">
