--- a/views/challenges/challenge_misc/category5_misc.ejs
+++ b/views/challenges/challenge_misc/category5_misc.ejs
@@ -260,9 +260,9 @@
       [튜토리얼]
     </div>
     <div class="txt">
-      <p><b>확장자 알아보기</b></p>
+      <p><b>헥스에디터</b></p>
       <br>
-      <p>이 파일의 원래 확장자는 txt입니다. 확장자를 txt로 바꾸고 파일을 열어보세요.</p>
+      <p>헥스에디터로 파일을 열어보세요.</p>
       <p><a href='misc/tutorial.jpg'>tutorial.jpg</a></p>
 
     </div>
@@ -287,7 +287,7 @@
       <p><b>Welcome</b></p>
       <br>
       <p>CUHA CTF를 참여해주셔서 감사합니다.</p>
-      <p>Hint : CUHA CTF 페이지를 잘 살펴보세요</p>
+      <p>Hint : CUHA CTF 페이지를 잘 살펴보세요.</p>
      
     </div>
     <form action="/challenge/flag" method="post">
@@ -310,7 +310,7 @@
     <div class="txt">
       <p><b>Discord</b></p>
       <br>
-      <p>CUHA Frashman CTF 2023의 디스코드를 잘 살펴보세요</p>
+      <p>CUHA Frashman CTF 2023의 디스코드를 잘 살펴보세요.</p>
     </div>
     <form action="/challenge/flag" method="post">
     <div class="footer">
@@ -332,7 +332,7 @@
     <div class="txt">
       <p><b>coffee</b></p>
       <br>
-      <p>커피 한 잔 하면서 하세요</p>
+      <p>커피 한 잔 하면서 하세요.</p>
       <p><a href='misc/coffee.jpg'>coffee.jpg</a></p>
     </div>
     <form action="/challenge/flag" method="post">
@@ -354,7 +354,7 @@
     <div class="txt">
       <p><b>dig_flag</b></p>
       <br>
-      <p>은닉처를 파보면 플래그가 나올 것 같아요</p>
+      <p>은닉처를 파보면 플래그가 나올 것 같아요.</p>
       <p><a href='misc/dig_flag.jpg'>dig_flag.jpg</a></p>
     </div>
     <form action="/challenge/flag" method="post">
