--- a/views/etc/rules.ejs
+++ b/views/etc/rules.ejs
@@ -14,7 +14,9 @@
             <p>3. 대회 운영 및 다른 참가자에 대한 방해 행위는 금지입니다.</p>
             <p>4. Flag, 솔루션, 힌트 등의 공유는 금지입니다.</p>
             <P>5. chatGPT와 같은 AI 챗봇 사용은 금지입니다.</P>
-            <p>6. 기타 문의사항은 운영진에게 말씀해주시기 바랍니다.</p>
+            <p>6. 그 외에 운영진이 부적절하다고 판단하는 행위는 제재를 받을 수 있습니다.</p>
+            <p>7. 운영진은 최종 결정 권한을 가집니다.</p>
+            <p>8. 기타 문의사항은 운영진에게 말씀해 주시기 바랍니다.</p>
         </div>
     </body>
 </html>
